fix: font blurred

--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -12,5 +12,5 @@ $theme-color-blue:  #5081A2;
  * Fonts
  */
 $theme-font-article: Lato, "Hiragino Sans GB", "华文细黑", "STHeiti", "微软雅黑", "Microsoft YaHei", SimHei, "Helvetica Neue", Helvetica, Arial, sans-serif;
-$theme-font-special: "RBNo2Light", Raleway, Consolas, monospace, Serif;
-$theme-font-normal: monospace, Raleway, Consolas, Serif;
+$theme-font-special: "RBNo2Light", Raleway, Consolas, monospace, sans-serif;
+$theme-font-normal: Raleway, Consolas, monospace, sans-serif;
